--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "nodemailer": "^6.9.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.6",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-resizable": "^3.0.5",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.26.3",
     "stripe": "^13.11.0"
