--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nextjs-toploader": "^1.6.11",
     "nodemailer": "^6.9.13",
     "react": "18.2.0",
+    "react-best-gradient-color-picker": "^3.0.7",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.6",
     "react-hot-toast": "^2.4.1",
