--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "form-data": "^4.0.0",
-    "html2canvas": "^1.4.1",
     "mailgun.js": "^9.4.1",
     "next": "^14.1.4",
     "next-plausible": "^3.12.0",
@@ -36,8 +35,7 @@
     "react-rnd": "^10.4.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.26.3",
-    "stripe": "^13.11.0",
-    "use-react-screenshot": "^4.0.0"
+    "stripe": "^13.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
