--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@langchain/openai": "^0.0.28",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
-    "@supabase/supabase-js": "^2.41.1",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.42.5",
     "axios": "^1.6.8",
     "crisp-sdk-web": "^1.0.22",
     "dom-to-image": "^2.6.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "form-data": "^4.0.0",
+    "langchain": "^0.1.34",
     "mailgun.js": "^9.4.1",
     "next": "^14.1.4",
     "next-plausible": "^3.12.0",
@@ -38,7 +41,8 @@
     "react-tooltip": "^5.26.3",
     "set-cookie-parser": "^2.6.0",
     "source-map-js": "^1.2.0",
-    "stripe": "^13.11.0"
+    "stripe": "^13.11.0",
+    "zod": "^3.22.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
