--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@langchain/community": "^0.0.51",
     "@langchain/openai": "^0.0.28",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/ssr": "^0.3.0",
@@ -39,6 +40,7 @@
     "react-rnd": "^10.4.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.26.3",
+    "replicate": "^0.18.1",
     "set-cookie-parser": "^2.6.0",
     "source-map-js": "^1.2.0",
     "stripe": "^13.11.0",
