--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.42.5",
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "axios": "^1.6.8",
     "crisp-sdk-web": "^1.0.22",
     "dom-to-image": "^2.6.0",
